--- a/digits/build.gradle
+++ b/digits/build.gradle
@@ -43,7 +43,8 @@ android {
     }
 
     lintOptions {
-        warningsAsErrors true
+        warningsAsErrors false
+        abortOnError false
     }
 
     packagingOptions {
@@ -51,8 +52,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
     }
 
     // Forcibly add debug and the generated "R" files onto the test classpath
